importação das bibliotecas

--- a/classificação_de_digitos_com_PyTorch.ipynb
+++ b/classificação_de_digitos_com_PyTorch.ipynb
@@ -22,6 +22,22 @@
     "from torchvision import dataset, transforms\n",
     "import matplotlib.pyplot as plt"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c0fe9ca",
+   "metadata": {},
+   "source": [
+    "# 2 - Preparação dos Dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0aed356a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
