Preparação do dados

--- a/classificação_de_digitos_com_PyTorch.ipynb
+++ b/classificação_de_digitos_com_PyTorch.ipynb
@@ -37,7 +37,23 @@
    "id": "0aed356a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Transformação: converte imagem para tensor e normalize os pixels (0 a 1)\n",
+    "transform = transforms.Compose([\n",
+    "  transforms.ToTensor(),\n",
+    "  transforms.Normalize((0.5,), (0.5,))\n",
+    "])\n",
+    "\n",
+    "# Download dos dados (se ainda não estiverem na maquina)\n",
+    "train_dataset = dataset.MNIST(root='./data', train=True, transform=True, transform=transform, download=True)\n",
+    "\n",
+    "test_dataset = dataset.MNIST(root='./data', train=False, transform=transform, download=True)\n",
+    "\n",
+    "# DataLoaders: carregam os dados em mini-batches\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)\n",
+    "\n",
+    "test_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)"
+   ]
   }
  ],
  "metadata": {
