Criando o modelo rede neural

--- a/classificação_de_digitos_com_PyTorch.ipynb
+++ b/classificação_de_digitos_com_PyTorch.ipynb
@@ -54,6 +54,38 @@
     "\n",
     "test_loader = torch.utils.data.DataLoader(train_dataset, batch_size=64, shuffle=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec626edd",
+   "metadata": {},
+   "source": [
+    "# 3 - Criando o Modelo (Rede Neural)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f47e8402",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.fc1 = nn.Linear(28*28, 128)\n",
+    "        self.fc2 = nn.Linear(128, 64)\n",
+    "        self.fc3 = nn.Linear(64, 10)\n",
+    "    \n",
+    "    def foward(self, x):\n",
+    "        x = x.view(-1, 28*28)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = F.relu(self.fc2(x))\n",
+    "        x = self.fc3(x)\n",
+    "        return x\n",
+    "    \n",
+    "model = Net()"
+   ]
   }
  ],
  "metadata": {
