--- a/classificação_de_digitos_com_PyTorch.ipynb
+++ b/classificação_de_digitos_com_PyTorch.ipynb
@@ -86,6 +86,25 @@
     "    \n",
     "model = Net()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82c20fe4",
+   "metadata": {},
+   "source": [
+    "# 5 - Funçao de perda e otimizador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7764207d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01, momentum=0.9)"
+   ]
   }
  ],
  "metadata": {
